--- a/BHY Takı/about.html
+++ b/BHY Takı/about.html
@@ -55,7 +55,7 @@
 
             </div>
             <div class="right_side">
-                <h2>Behiye DÜNDAR Kimdir?</h2>
+                <h2>BHY Kimdir?</h2>
                 <p>&emsp;&emsp;&emsp;&emsp;&emsp;Lorem ipsum dolor sit amet, consectetur adipisicing elit. In error enim quasi
                     suscipit, deleniti
                     assumenda temporibus sequi molestiae est soluta odio doloribus! Maxime recusandae distinctio minima.
